<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texteViewNumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_ac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/ac"
            android:width="124dp"
            android:textSize="24sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_mn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="+/-"
            android:width="124dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_prc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/precentagem"
            android:width="124dp"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/divisão"
            android:width="124dp"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:width="124dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/_7"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="8"
            android:width="124dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="9"
            android:width="124dp"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_x"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/x"
            android:width="124dp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="@string/_4"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="5"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="@string/_6"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_menos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/menos"
            android:width="124dp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="@string/_1"
            android:textSize="24sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="@string/_2"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="124dp"
            android:text="3"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_mais"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:text="@string/mais"
            android:width="124dp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="12dp"
            android:text="@string/_0"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_virbula"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="12dp"
            android:height="75dp"
            android:text="@string/virbula"
            android:textSize="24sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_igual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_calc"
            android:width="140dp"
            android:text="@string/igual"
            android:textSize="24sp"
            tools:targetApi="lollipop" />

    </LinearLayout>

</LinearLayout>